--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Github Test</string>
-
+    <string name="base_url">https://api.github.com</string>
 
     <string name="search_user_hint">Search Github users</string>
     <string name="result_not_found">Result not found</string>
